# revealyst

./: .dev.vars.example  .gitattributes  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  cloudflare-env.d.ts  drizzle.config.ts  middleware.ts  next.config.ts  open-next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.agents/: product-marketing-context.md
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md  contract-guardian.md
.claude/workflows/: gate-review.js
.codex/: config.toml  hooks.json
.codex/agents/: adversarial-reviewer.toml  contract-guardian.toml
.codex/hooks/: post-edit-typecheck.mjs  tripwire-guard.mjs
.github/workflows/: ci.yml  deploy.yml  desktop-ci.yml  diagnose-identity-subjects.yml  diagnose-scores.yml  recompute-scores.yml  release-agent.yml  release-desktop.yml  seed-demo.yml
desktop-agent/: README.md  index.html  package-lock.json  package.json  perf-budgets.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop-agent/src/: App.test.tsx  App.tsx  main.tsx  (+1 more)
desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent/src-tauri/capabilities/: default.json
desktop-agent/src-tauri/fixtures/: agent-ingest-request.json  desktop-config-vector.json  desktop-diagnostics-bundle.json
desktop-agent/src-tauri/icons/: icon.icns
desktop-agent/src-tauri/src/: allowlist.rs  auth.rs  commands.rs  config.rs  deeplink.rs  diagnostics.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  runtime.rs  secrets.rs  state.rs  token.rs  tray.rs  update.rs
desktop-agent/src-tauri/src/connectors/: ai_tools.rs  claude_code.rs  claude_export.rs  mod.rs
desktop-agent/src-tauri/src/connectors/ai_tools/: tests.rs
desktop-agent/src-tauri/src/connectors/claude_code/: tests.rs
desktop-agent/src-tauri/src/connectors/claude_export/: tests.rs
desktop-agent/src-tauri/src/extract/: classify.rs  counts.rs  mod.rs  tests.rs
desktop-agent/src-tauri/src/privacy/: mod.rs  policy.rs  quarantine.rs  validator.rs
desktop-agent/src-tauri/src/store/: checkpoints.rs  crypto.rs  mod.rs  queue.rs  remote_config.rs  retention.rs  settings.rs
desktop-agent/src-tauri/src/sync/: batch.rs  mod.rs  retry.rs
docs/: Architecture-brief.md  Revealyst_AI_Capability_Execution_Plan.md  Revealyst_Claude_Code_Workflow.md  Revealyst_Closure_Execution_Plan.md  Revealyst_Desktop_Agent_Execution_Plan.md  Revealyst_Execution_Plan.md  Revealyst_Execution_Plan_V4.md  Revealyst_Feasibility_Study.md  Revealyst_Harness_Setup.md  Revealyst_Product_Direction_V4.md  Revealyst_Product_Spec_V2.md  Revealyst_Product_Spec_V3.md  Revealyst_Product_Spec_V4.md  Revealyst_Team_Manager_Dashboard_Execution_Plan.md  Revealyst_UIUX_Execution_Plan.md  Revealyst_W7_Implementation_Report.md  admin-section-plan.md  ai-capability-implementation-gap-analysis.md  ai-intelligence-implementation-plan.md  approvals.md  connector-facts.md  desktop-agent-release-evidence.md  desktop-release-runbook.md  documentation-plan.md  infra.md  manual-sync-plan.md  marketing-strategy.md  marketing-website-plan.md  ops-runbooks.md  product-signoffs.md  score-definitions.md  scoring-explained.md  scoring-verification-worksheet.md  visibility-readiness.md
drizzle/: 0000_walking-skeleton.sql  0001_auth.sql  0002_org-members-pk.sql  0003_entities.sql  0004_connections-subjects.sql  0005_credentials.sql  0006_facts.sql  0007_seed-metric-catalog.sql  0008_scores.sql  0009_seed-score-presets.sql  0010_connector-runs.sql  0011_invites.sql  0012_benchmarks.sql  0013_seed-benchmarks.sql  0014_share-and-consent.sql  0015_subscriptions.sql  0016_audit-log.sql  0017_seed-personal-person-presets.sql  0018_backfill-email-verified.sql  0019_platform-admin.sql  0020_poll-heartbeats-observed-at-index.sql  0020_seed-agentic-and-credits-metrics.sql  0021_budgets.sql  0022_seed-agentic-and-credits-metrics.sql  0023_digest-preferences.sql  0024_rec-interaction-state.sql  0025_budget-alert-state.sql  0026_roles-entity.sql  0027_renewal-reminders.sql  0028_exec-report-state.sql  0029_recommendation-catalog.sql  0030_capability-graph.sql  0031_user-capability-state.sql  0032_missions.sql  0033_recommendation-exposure.sql  0034_seed-otel-markers.sql  0035_seed-context-tokens.sql  0036_team-managers.sql  0037_desktop-pairing-codes.sql  0038_capability-history.sql  (+13 more)
public/: _headers
scripts/: calibrate-scores.ts  check-adr-numbers.mjs  check-org-scope.mjs  desktop-artifact-size-gate.mjs  desktop-capability-audit.mjs  desktop-collect-bundles.sh  desktop-perf-harness.mjs  desktop-updater-manifest.mjs  dev-db.mjs  diagnose-identity-subjects.ts  diagnose-scores.ts  digest-return-rate.ts  gate-evidence.mjs  gen-desktop-config-vector.mts  generate-agent-allowlist-json.mjs  generate-agent-ingest-fixture.mjs  generate-desktop-diagnostics-fixture.mjs  launch-metrics.ts  otel-capture.mjs  rec-engagement-metrics.ts  recompute-org.ts  rotate-kek.ts  seed-demo-teardown.ts  seed-demo.ts  seed-fixtures.ts  team-overview-views.ts
src/: env.d.ts  middleware.ts  worker.ts
tests/: access.test.ts  account-deletion.test.ts  admin-readers.test.ts  admin-team-workspace-api.test.ts  admin.test.ts  agent-cli-contract.test.ts  agent-ingest.test.ts  agentic-adoption-fixtures.test.ts  agentic-adoption.test.ts  anomaly.test.ts  api-impl.test.ts  api-routes.test.ts  attribution-trend.test.ts  audit-log.test.ts  auth.test.ts  benchmarks.test.ts  billing.test.ts  budget-alert.test.ts  capability-catalog.test.ts  capability-coverage.test.ts  capability-curriculum.test.ts  capability-depth.test.ts  capability-glossary.test.ts  capability-history.test.ts  capability-noneng-honesty.test.ts  capability-state-reducer.test.ts  capability-state.test.ts  check-adr-numbers.test.ts  coaching-recommendations.test.ts  connect-write.test.ts  connections-manage.test.ts  connections-subjects.test.ts  connector-anthropic.test.ts  connector-copilot.test.ts  connector-cursor.test.ts  connector-framework.test.ts  connector-openai.test.ts  connector-scoped-ingest.test.ts  contracts.test.ts  correlation.test.ts  (+135 more)
(+946 files in other folders)
