[package]
name = "revealyst-desktop-agent"
version = "0.1.0"
description = "Revealyst Desktop Agent — background tray utility"
edition = "2021"

# Tauri 2 convention: the app logic lives in a library crate so mobile targets
# and integration tests can link it; the binary is a thin wrapper.
[lib]
name = "revealyst_desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
# Autostart is opt-in only, controlled from Rust commands (no frontend
# capability). Opener is used ONLY from the Rust side with a validated
# Revealyst-origin allowlist (lifecycle.rs) — again no frontend capability.
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
