[package]
name = "revealyst-desktop-agent"
version = "0.1.0"
description = "Revealyst Desktop Agent — background tray utility"
edition = "2021"

# Tauri 2 convention: the app logic lives in a library crate so mobile targets
# and integration tests can link it; the binary is a thin wrapper.
[lib]
name = "revealyst_desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
# Autostart is opt-in only, controlled from Rust commands (no frontend
# capability). Opener is used ONLY from the Rust side with a validated
# Revealyst-origin allowlist (lifecycle.rs) — again no frontend capability.
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
# Deep-link handling for the revealyst:// callback (spec §8.2). The callback
# URL is parsed and validated ONLY on the Rust side (deeplink.rs) — the
# frontend has no deep-link capability and can never read the raw URL/code.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
# PKCE pairing client (auth.rs, spec §8). rustls (no OpenSSL system dep);
# json for the tiny start/exchange bodies; gzip for response decoding.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
] }
# OS secure storage for the device token (secrets.rs, spec §8.3). The native
# stores are the only place the token ever lives.
keyring = { version = "3", features = ["apple-native", "windows-native"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
# Verify-only Ed25519 for the signed remote config (config.rs, spec §17). Pure
# Rust (RustCrypto), matching the tree's no-OpenSSL posture; `default-features
# = false` drops the RNG (`rand_core`) surface we never use — signature
# verification needs no randomness, only `VerifyingKey::verify_strict`.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# Encrypted local store + queue (store/, spec §13, plan T3.2). SQLCipher is
# deliberately NOT used (risk #3): `rusqlite` `bundled` compiles the SQLite
# amalgamation with the C toolchain Tauri already needs — no OpenSSL, matching
# the tree's rustls posture — and `aes-gcm` (pure-Rust RustCrypto) encrypts the
# payload columns at the application layer. See src/store/mod.rs for the full
# decision + the privacy-disclosure delta.
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
url = "2"
hostname = "0.4"
# oneshot channel + timeout for the browser round-trip in auth.rs; `time` also
# drives the sync engine's backoff sleeps (sync/mod.rs).
tokio = { version = "1", features = ["sync", "time"] }
# Request-body gzip for the sync upload (sync/, spec §14.3). reqwest's `gzip`
# feature only DECODES responses; the ingest body must be compressed manually
# and sent with Content-Encoding: gzip. flate2 defaults to the pure-Rust
# miniz_oxide backend — no system/zlib dep, matching the tree's rustls posture.
flate2 = "1"
# Claude data-export importer (connectors/claude_export.rs, spec §11.3.2 / T5.3).
# `default-features = false` drops the aes-crypto / bzip2 / lzma / zstd / xz /
# deflate64 surface a Claude export never uses (smaller build + audit surface,
# no C system deps); `deflate` is the only compression a Claude.ai export ZIP
# uses and it wires the pure-Rust flate2 rust_backend already in this tree (plus
# zopfli, pure-Rust, write-path only) — matching the no-OpenSSL/no-zlib posture.
# The importer NEVER extracts to disk (in-memory streaming), so no `walkdir`/fs
# extraction surface is pulled in.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# The sync-engine unit tests drive the async upload orchestration against a
# mock transport, so they need a runtime + the test macro. Kept in
# dev-dependencies so the release build's tokio surface stays sync+time only.
tokio = { version = "1", features = ["rt", "macros", "time"] }
